/**
 * Listener for saving to favorites.
 */
public interface SavePanelListener {
    /**
     * Called when the user wants to save the current playlist to favorites.
     */
    public void saveToFavorites();
}
